# ui

./: .gitignore  README.md
text_viewer/: menu.h  menu.rc  text_processor.c  text_processor.h  text_viewer.cbp  utils.c  utils.h  win.c  wndproc.c
text_viewer/text_processing/: text_processing.c  text_processing.h  text_processoing.cbp
vs_math/: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  vs_math.sln
vs_math/include/: IMultiIndex.h  Interfacedllexport.h
vs_math/src/: CompactImpl.cpp  CompactImpl.h  CompactImplControlBlock.cpp  CompactImplControlBlock.h  CompactImplIterator.cpp  LoggerImpl.cpp  MultiIndexImpl.cpp  MultiIndexImpl.h  SetImpl.cpp  SetImpl.h  SetImplControlBlock.cpp  SetImplControlBlock.h  SetImplIterator.cpp  VectorImpl.cpp
vs_math/test/: CompactTest.cpp  MultiIndexTest.cpp  SetTest.cpp  VectorTest.cpp  main.cpp  tests.hpp
vs_math/vs_math/: miltiindexImpl.cpp  vs_math.vcxproj  vs_math.vcxproj.filters
vs_math/vs_math/include/: IMultiIndex.h
vs_math/vs_math/src/: LoggerImpl.cpp  SetImpl.cpp  SetImplControlBlock.cpp  VectorImpl.cpp  compact_impl.cpp  problem_impl.cpp  solver_impl.cpp
vs_math/vs_math/test/: SetTest.cpp  VectorTest.cpp  main.cpp  tests.hpp
